--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "editor.defaultFormatter": "golang.go",
-  "cSpell.language": "en,ru"
+  "cSpell.language": "en,ru",
+  "[html]": {
+    "editor.defaultFormatter": "vscode.html-language-features"
+  }
 }
