feat: use go generate style flags and added metrics plugin
the configuration file now does not support downloading for the plugin, the setting must be used via a prefix, it was:

plugins:
    http:
      output: path

has become:

plugins:
  http-output: path

--- a/examples/grpc-service/gg.yaml
+++ b/examples/grpc-service/gg.yaml
@@ -2,5 +2,4 @@ packages:
   - ./internal/usecase/controller/...
   - ./pkg/dto/...
 plugins:
-  http:
-    client-output: ./pkg/client/client.go
+  http-client-output: ./pkg/client/client.go
